# lmsilo-core

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  OVERVIEW.md  README.md  docker-compose.cuda.yml  docker-compose.yml  pyproject.toml
portal/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
portal/public/: config.js
portal/src/: App.tsx  index.css
scripts/: generate_clients.sh
shared/: __init__.py
shared-ui/: package-lock.json  package.json  vite.config.ts
shared-ui/src/: index.ts  types.ts
shared-ui/src/components/: AuditLogViewer.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  JobList.tsx  JobQueue.tsx  LoadingSpinner.tsx  StatusBadge.tsx
shared-ui/src/hooks/: useApi.ts  useLocalStorage.ts  useTheme.ts  useWebSocket.ts
shared/api/: __init__.py  audit.py  errors.py
shared/batch/: __init__.py
shared/models/: __init__.py  audit.py
shared/observability/: __init__.py  metrics.py  tracing.py
shared/resilience/: __init__.py  circuit_breaker.py
shared/services/: __init__.py  audit.py
shared/workers/: __init__.py  dlq.py
tests/: conftest.py
tests/shared/: test_audit.py  test_circuit_breaker.py
